desktop & mobile HTML, CSS; TO DO: form validation

--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Base Apparel | Coming Soon</title>
     <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
-    <h1>Hello :)</h1>
+    <header>
+        <div class="header-main">
+            <div class="h-logo">
+                <img src="src/images/logo.svg" alt=" ">
+            </div>
+            <div class="header-img--mobile">
+                <img src="src/images/hero-mobile.jpg" alt=" ">
+            </div>
+            <div class="h-copy">
+                <h1 class="h-heading">
+                    <span class="h-heading--light">WE'RE</span>
+                    <span class="h-heading--bold">COMING </br> SOON</span>
+                </h1>
+                <p class="h-paragraph">
+                    Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.
+                </p>
+            </div>
+            <div class="h-subscribe">
+                <form action=" ">
+                    <input type="email" name="email-signup" id="email-signup" placeholder="Email Address">
+                    <button>
+                        <img src="src/images/icon-arrow.svg" alt="submit email">
+                    </button>
+                </form>
+            </div>
+        </div>
+        <div class="header-img--desktop">
+            <img src="src/images/hero-desktop.jpg" alt=" ">
+        </div>
+    </header>
 </body>
 </html>
