--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
             </div>
             <div class="h-subscribe">
-                <form action=" ">
+                <form>
                     <input class="h-subscribe__input" type="email" name="email-input" id="email-input" placeholder="Email Address" >
                     <button class="h-subscribe__btn" id="email-submit">
                         <img src="src/images/icon-arrow.svg" alt="submit email">
@@ -39,7 +39,6 @@
             </div>
         </div>
         <div class="header-img--desktop">
-            <img src="src/images/hero-desktop.jpg" alt=" ">
         </div>
     </header>
 </body>
